--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
 /* CSS Document */
 
-h1{
+* {
 	color: green;
 }
 
-h2{
-	color: green;
+a {
+	text-decoration: none;
+	text-shadow: 2px 2px yellowgreen;
 }
 
-p{
-	color: green;
+a:hover{
+	color: yellowgreen;
+	text-shadow: 2px 2px green;
 }
 
-body{
+body {
 	background: black;
-}
-@media (max-width : 1187px ){
+	font-family: 'Courier New', Courier, monospace;
 }
