--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,55 @@
 
 a {
 	text-decoration: none;
-	text-shadow: 2px 2px yellowgreen;
+	text-shadow: 1px 1px yellowgreen;
 }
 
-a:hover{
+a:hover {
 	color: yellowgreen;
-	text-shadow: 2px 2px green;
+	text-shadow: 1px 1px green;
 }
 
 body {
+	margin: auto;
+	display: block;
 	background: black;
 	font-family: 'Courier New', Courier, monospace;
+	text-align: center;
+
+}
+
+p{
+	margin-left: 5vh;
+	margin-right: 5vh;
+}
+
+nav {
+	align-self: center;
+	align-items: center;
+	display: inline-block;
+	padding: 1vh;
+	text-align: center;
+}
+
+.nav-element {
+	padding: 2vh;
+	display: inline-block;
+}
+
+h1 {
+	text-align: center;
+	padding-left: 2vh;
+	padding-right: 2vh;
+
+}
+
+img{
+	max-width: 100%;
+	height: auto;
+}
+
+.game-image {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
